Remove proposed app demo mode
